Fixed featured projects slider bug (Text was not responsive)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -241,7 +241,7 @@ flex-direction: column;
 #slides .inner{
     transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
     width: 400%;
-    line-height: 0;
+    line-height: 1;
     height: 400px;
 }
 #slides .slide{
@@ -834,6 +834,8 @@ flex-direction: column;
     width: 0px;
     opacity: 0;
   }
+
+  
   
   /* Animation */
   @keyframes fadeInUp {
@@ -923,6 +925,14 @@ flex-direction: column;
 		padding: 7px;
 		border-radius: 500px;
 	}
+
+  .slide-content{
+    padding: 10px;
+  }
+  .slide-content h2{
+    font-size: 20px;
+
+  }
 
   }
 
